# MabiAutoBotDesc_CMake

./: .gitignore  CMakeLists.txt
resource/: AutoBotDesc.xml  Race.china.txt  autobot_buff.txt  autobot_name.txt  autobot_pick.txt  autobot_separatesummon.txt  autobot_tmp.txt  autobot_tmp.xml  itemDB_ETC.xml  itemDB_Script.xml  itemdb_etc.china.txt  itemdb_script.china.txt  standard.china.txt
src/: mabiAutoBot.h  mabiAutoBotHelper.cpp  mabiAutoBotHelper.h  mabiBuffHelper.cpp  mabiBuffHelper.h  mabiRace.h  main.cpp
